--- a/solar-system/deployment.yml
+++ b/solar-system/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - image: siddharth67/solar-system:v9
-        name: solar-system
+        name: solar-system2
         imagePullPolicy: Always
         ports: 
         - containerPort: 80
